Only show notification in the user's dashboard, not every page. Fix responsiveness of notification bar in unison with fixed header menu (positions itself just below the header when on mobile with a fixed header)

--- a/wp-content/themes/meltingpot-child/style.css
+++ b/wp-content/themes/meltingpot-child/style.css
@@ -1255,3 +1255,10 @@ body.modal-open .transparent-modal {
   .ld-item-list .ld-item-list-item.current {
 	  border: 2px solid #83cdcf;
   }
+
+  @media screen and (max-width: 1024px) {
+	.easy-notification-bar {
+		position: fixed !important;
+		top: 60px;
+	}
+  }
